--- a/src/CMakeSettings.json
+++ b/src/CMakeSettings.json
@@ -1,6 +1,25 @@
 ﻿{
   "configurations": [
     {
+      "name": "Linux-Docker",
+      "generator": "Unix Makefiles",
+      "remoteMachineName": "localhost",
+      "configurationType": "Debug",
+      "remoteCMakeListsRoot": "/source",
+      "cmakeExecutable": "/usr/local/bin/cmake",
+      "buildRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\build\\${name}",
+      "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
+      "remoteBuildRoot": "/tmp/output",
+      "remoteInstallRoot": "/tmp/install",
+      "remoteCopySources": false,
+      "cmakeCommandArgs": "-DCMAKE_TOOLCHAIN_FILE=/tmp/vcpkg/scripts/buildsystems/vcpkg.cmake",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [
+        "linux_x64"
+      ]
+    },
+    {
       "name": "x86-Debug",
       "generator": "Ninja",
       "configurationType": "Debug",
@@ -12,34 +31,6 @@
       "cmakeCommandArgs": "-DCMAKE_TOOLCHAIN_FILE=C:/source/repos/vcpkg/scripts/buildsystems/vcpkg.cmake",
       "buildCommandArgs": "-v",
       "ctestCommandArgs": ""
-    },
-    {
-      "name": "Linux-Docker",
-      "generator": "Unix Makefiles",
-      "remoteMachineName": "192.168.0.2",
-      "configurationType": "Debug",
-      "remoteCMakeListsRoot": "/var/tmp/src/${workspaceHash}/${name}",
-      "cmakeExecutable": "/usr/local/bin/cmake",
-      "buildRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\build\\${name}",
-      "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
-      "remoteBuildRoot": "/var/tmp/build/${workspaceHash}/build/${name}",
-      "remoteInstallRoot": "/var/tmp/build/${workspaceHash}/install/${name}",
-      "remoteCopySources": true,
-      "remoteCopySourcesOutputVerbosity": "Normal",
-      "remoteCopySourcesConcurrentCopies": "10",
-      "remoteCopySourcesMethod": "rsync",
-      "remoteCopySourcesExclusionList": [
-        ".vs",
-        ".git"
-      ],
-      "rsyncCommandArgs": "-t --delete --delete-excluded",
-      "remoteCopyBuildOutput": false,
-      "cmakeCommandArgs": "-DCMAKE_TOOLCHAIN_FILE=/tmp/vcpkg/scripts/buildsystems/vcpkg.cmake",
-      "buildCommandArgs": "",
-      "ctestCommandArgs": "",
-      "inheritEnvironments": [
-        "linux_x64"
-      ]
     },
     {
       "name": "Linux-VM",
