--- a/service/docker-compose.yml
+++ b/service/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     restart: unless-stopped
     networks:
       - app-network
-  findfaces-ws:
+  findfaces-proxy:
     image: nginx:mainline-alpine
-    container_name: findfaces-ws
+    container_name: findfaces-proxy
     restart: unless-stopped
     ports:
       - "8080:80"
